--- a/assests/css/responsive/min-600.css
+++ b/assests/css/responsive/min-600.css
@@ -37,7 +37,7 @@
   }
 }
 @media screen and (max-width: 486px) {
-  /* .navbar {
+  .navbar {
     margin: 0px;
     flex-direction: column;
     align-items: flex-end;
@@ -53,7 +53,7 @@
 }
 
 @media screen and (max-width: 500px) {
-  .nav__lists {
+  /* .nav__lists {
     background-color: white;
     width: 100%;
   }
