--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -120,7 +120,7 @@
   background: rgba(23, 27, 65, 0.9);
   border: 1px solid #000000;
   border-radius: 20px;
-  margin-top: 80px;
+  margin-top: 10px;
   padding: 132px 10px;
 }
 .skilline .card1 {
@@ -143,12 +143,16 @@
   opacity: 1;
   color: #ffffff;
 }
+.skilline .card .btn:hover {
+  border-color: black;
+}
 .skilline .card .btn {
   margin-top: 17px;
   opacity: 1;
+  cursor: pointer;
 }
 .skilline .card2 .btn--secondary {
-  background: rgba(35, 189, 238, 0.9);
+  background: rgba(81, 109, 117, 0.9);
   color: white;
 }
 
@@ -243,7 +247,7 @@
 /* featuresasfd? */
 
 .feature {
-  margin-top: 182px;
+  margin-top: 102px;
   justify-content: center;
 }
 .feature h2 {
@@ -267,6 +271,7 @@
 .feature .feature__container {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   margin-top: 176px;
 }
 .feature__image {
@@ -486,6 +491,7 @@
   flex-wrap: wrap;
   justify-content: center;
   gap: 30px;
+  margin-top: 40px;
 }
 
 .testimonial .btn {
